--- a/homestyle.css
+++ b/homestyle.css
@@ -119,17 +119,7 @@ header {
   font-size: 24px;
 
 }
-
-
 .container {
   display: flex; 
   justify-content: center;
 }
-
-.text1, .text2 {
-  margin-right: 0;
-  align-items: center; 
-
-}
-
-
